# AGENT

./: .env.example  .gitignore  nx.json  package.json  pnpm-lock.yaml  test_nebius_integration.py  vercel.json  verify_all_presets.py
.github/workflows/: ci.yml
.kilocode/workflows/: local_quality_user_test.txt
.nx/cache/: run.json
.nx/workspace-data/: A6297427-4BD3-5C97-8F36-E33AA3DC11EF.db-shm  A6297427-4BD3-5C97-8F36-E33AA3DC11EF.db-wal  expo-15269822403136162141.hash  file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  playwright-5186013267177752385.hash  project-graph.json  source-maps.json  vite-9347777721732807074.hash
agent/: advanced_training_system.py  cross_mode_integrator.py  enhanced_llm_integration.py  llm_integration.py  llm_manager.py  nebius_integration.py  real_world_testing_system.py  specialized_llm_trainer.py
api/: index.py
apps/mobile/: app.json  package.json
apps/web/: project.json
config/: nebius_config.yaml
examples/: nebius_integration_example.py
rust/: Cargo.toml
rust/agent-llm-core/: Cargo.toml
rust/agent-llm-core/src/: lib.rs  main.rs
scripts/: backup.sh  quality_check.sh
training_data/: guidelines.md
training_data/analysis/: README.md  session_1_fundamentals.md
training_data/automation/: README.md  session_1_fundamentals.md
training_data/communication/: README.md  session_1_fundamentals.md
training_data/creative/: README.md  session_1_fundamentals.md
training_data/design/: README.md  session_1_fundamentals.md
training_data/development/: README.md  session_1_fundamentals.md
(+32 files in other folders)
