[package]
name = "agent-llm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
warp = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }

[lib]
name = "agent_llm_core"
path = "src/lib.rs"

[[bin]]
name = "llm-server"
path = "src/main.rs"
